[package]
name = "tui-scheduler"
version = "0.1.0"
authors = ["Michael Nolde <mno@flatpolar.org>"]
edition = "2018"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
dict = "0.1.5"
home = "0.5.3"

